trying to fix contact header spacing issue on vercel

--- a/src/Pages/Contact/contact.scss
+++ b/src/Pages/Contact/contact.scss
@@ -202,6 +202,7 @@
           margin: 140px 0px 0px 0px;
           padding: 0px 0px 0px 0px;
           @media screen and (max-width: styles.$screen-sm-max) {
+            height: auto;
             padding: 20px 0px 0px 0px;
             margin: 0px 0px 0px 0px;
           }
@@ -239,11 +240,9 @@
           height: auto;
           margin: 200px 0px 0px 0px;
           @media screen and (max-width: styles.$screen-sm-max) {
-            margin: 95px 0px 0px 0px;
+            margin: 0px 0px 0px 0px;
           }
           .contact-info-section2 {
-            width: 60%;
-            height: 100%;
             display: flex;
             flex-direction: row;
             justify-content: space-between;
@@ -255,6 +254,9 @@
               flex-direction: column;
               justify-content: center;
               align-items: flex-start;
+            }
+            @media screen and (max-width: styles.$screen-sm-max) {
+              margin: 105px 0px 55px 0px;
             }
             .inner-container {
               display: flex;
